# studymate-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SRS.md  TASKS.md  alembic.ini  prompt.txt  pyproject.toml  requirements.txt  test_flow.py  test_flow2.py  test_md.js
alembic/: env.py
alembic/versions/: cb1a701843c2_initial_schema.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  export.py  features.py  history.py  profile.py  upload.py
app/core/: exceptions.py  security.py
app/models/: __init__.py  api_key.py  base.py  document_cache.py  file_record.py  session_output.py  user.py
app/schemas/: __init__.py  api_key.py  auth.py  export.py  feature.py  file.py  history.py  user.py
app/services/: auth_service.py  email_service.py  file_parser.py  gemini_service.py  pdf_service.py  storage_service.py
static/: about.html  features.html  forgot-password.html  history.html  index.html  login.html  profile.html  register.html  reset-password.html
static/css/: styles.css
static/feature/: flashcards.html  mindmap.html  notes.html  quiz.html  revision.html
static/js/: api.js  auth.js  main.js  theme.js  upload.js  utils.js
static/js/features/: flashcards.js  mindmap.js  notes.js  quiz.js  revision.js
static/js/pages/: history.js  profile.js
tests/: conftest.py  test_api.py  test_auth.py  test_email.py  test_export.py  test_file_parser.py  test_history.py  test_profile.py  test_security.py
