[project]
name = "studymate-ai-hub"
version = "2.0.0"
description = "Academic productivity web application powered by Google Gemini AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.4.0",
    "cryptography>=44.0.0",
    "google-generativeai>=0.8.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "Pillow>=11.1.0",
    "python-magic>=0.4.0",
    "reportlab>=4.3.0",
    "weasyprint>=3.1.0",
    "boto3>=1.36.0",
    "fastapi-mail>=1.4.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.0",
    "pre-commit>=4.2.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ARG", "B", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.14"
warn_unused_configs = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
